--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,8 @@
       --color-primary:  #4D41C0;
       --white: #ffff;
       --text-light-gray: #aaa;
-
-    
+      --star-yellow: #FFBB3A;
+                
       }
 
 *{
@@ -82,7 +82,7 @@ a , a:hover {
   align-items: center;
   justify-content: space-between;
   border-radius: 0 0 8px 8px;
-  min-height: 150px;
+  min-height: 220px;
 
 }
 
@@ -92,6 +92,32 @@ a , a:hover {
   margin-bottom: 25px;
   text-align: center;
 }
+.dsmovie-card-description-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description-bottom h4 {
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--star-yellow);
+}
+
+.dsmovie-card-description-bottom img {
+    width: 22px;
+
+}
+
+.dsmovie-card-description-bottom p {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--text-light-gray);
+    margin-bottom: 10px;
+}
+
+
+
 .dsmovie-btn, .dsmovie-btn:hover {
   width: 180px;
   height: 40px;
@@ -126,8 +152,9 @@ a , a:hover {
 }
 
 *.dsmovie-form-description h3 {
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 700;
+  margin-bottom: 20px;
 }
 
 .dsmovie-form-group {
