Polimento da listagem

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ a , a:hover {
 }
 
 #dsmovie-card-list{
-  padding: 40px 0;
+  padding: 40px 10px;
 }
 
 .dsmovie-card{
@@ -82,12 +82,12 @@ a , a:hover {
   align-items: center;
   justify-content: space-between;
   border-radius: 0 0 8px 8px;
-  min-height: 220px;
+  min-height: 185px;
 
 }
 
 .dsmovie-card-description h3{
-  font-size: 14px;
+  font-size: 11px;
   font-weight: 700;
   margin-bottom: 25px;
   text-align: center;
